# DocuElevate

./: .deepsource.toml  .dockerignore  .env  .env.demo  .env.test  .env.test.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  =0.1.9  AGENTIC_CODING.md  AGENT_RUN_RUFF.md  ANALYSIS_SUMMARY.md  BUILD_DATE  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE_REPORT.md  Dockerfile  Dockerfile.local  FILENAME_FIX_SUMMARY.md  FRAMEWORK_ANALYSIS.md  GIT_SHA  IMPLEMENTATION_CHECKLIST.md  LICENSE  MILESTONES.md  NOTICE  OAUTH_IMPLEMENTATION_SUMMARY.md  README.md  ROADMAP.md  RUNTIME_INFO  SECURITY.md  SECURITY_AUDIT.md  SETTINGS_IMPLEMENTATION.md  TEST_COVERAGE_IMPROVEMENTS.md  TODO.md  TODO_TESTS.md  VERSION  WEBDAV_TESTING_SUMMARY.md  (+66 more)
.github/: copilot-instructions.md  copilot.yml  dependabot.yml
.github/instructions/: documentation.instructions.md  frontend.instructions.md  python-backend.instructions.md  testing.instructions.md
.github/workflows/: ci.yml  codeql.yaml  codeql.yml  deploy.yaml  docker-build.yaml  docker-ci.yml  release.yml  ruff-auto-fix.yml  tests.yaml
.jules/: sentinel.md
app/: __init__.py  agentic_setup.py  api.py  auth.py  celery_app.py  celery_worker.py  cli.py  config.py  database.py  frontend.py  main.py  models.py  pipeline_templates.py  rotate_encryption_key.py  routes_ui.py  tasks.py  utils.py
app/api/: __init__.py  admin_users.py  api_tokens.py  audit_logs.py  automation.py  azure.py  backup.py  billing.py  classification_rules.py  comments.py  common.py  compliance.py  database.py  diagnostic.py  dropbox.py  dropbox_imports.py  duplicates.py  files.py  google_drive.py  graphql_api.py  i18n.py  imap_accounts.py  imap_profiles.py  intake.py  integrations.py  knowledge.py  local_auth.py  logs.py  mobile.py  notifications.py  onboarding.py  onedrive.py  openai.py  pipelines.py  plans.py  privacy_rules.py  process.py  profile.py  qr_auth.py  queue.py  (+19 more)
app/frontend/: router.py
app/middleware/: __init__.py  audit_log.py  csrf.py  rate_limit.py  rate_limit_decorators.py  request_size_limit.py  security_headers.py  upload_rate_limit.py
app/routes/: license_routes.py
app/tasks/: __init__.py  automation_tasks.py  backup_tasks.py  batch_tasks.py  check_credentials.py  classify_document.py  compute_embedding.py  convert_to_pdf.py  convert_to_pdfa.py  document_bridge.py  dropbox_corpus_import.py  embed_metadata_into_pdf.py  extract_metadata_with_gpt.py  finalize_document_storage.py  imap_tasks.py  knowledge_research.py  monitor_stalled_steps.py  process_document.py  process_with_azure_document_intelligence.py  process_with_ocr.py  process_with_textract.py  reconcile_file_privacy.py  refine_text_with_gpt.py  retry_config.py  rotate_pdf_pages.py  send_to_all.py  subscription_tasks.py  translate_to_default_language.py  upload_to_dropbox.py  upload_to_email.py  upload_to_email.py.patch  upload_to_evernote.py  upload_to_ftp.py  upload_to_google_drive.py  upload_to_icloud.py  upload_to_nextcloud.py  upload_to_onedrive.py  upload_to_paperless.py  upload_to_s3.py  upload_to_sftp.py  (+8 more)
app/utils/: __init__.py  ai_provider.py  allowed_types.py  audit_service.py  automation_hooks.py  cache.py  celery_redis_backend.py  classification_rules.py  compliance_service.py  db_migrate.py  (+56 more)
browser-extension/: IMPLEMENTATION_SUMMARY.md  INSTALLATION.txt  PERMISSIONS.md  QUICKSTART.md  README.md  VISUAL_GUIDE.md  VISUAL_GUIDE_V1.0.md  manifest.json  test.html
docker/: compose-entrypoint.sh
docs/: API.md  AccessibilityGuide.md  AgenticSetup.md  AmazonS3Setup.md  AppleAppStoreCompliance.md  AuthenticationSetup.md  BillingSetup.md  BrowserExtension.md  BuildMetadata.md  CIToolsGuide.md  CIWorkflow.md  CI_DEDUPLICATION_SUMMARY.md  CLIGuide.md  ComplianceGuide.md  ConfigurationGuide.md  ConfigurationMaster.md  ConfigurationTroubleshooting.md  CredentialRotationGuide.md  DatabaseConfiguration.md  DearConciergeKnowledgeBridge.md  DeploymentGuide.md  DropboxSetup.md  Evergreen030ReleaseLine.md  EvernoteSetup.md  ExtractionEvaluation.md  FileDetailPageLayout.md  FileProcessingStatusArchitecture.md  GitHubCopilotConfiguration.md  GitHubSecretsSetup.md  GoogleDriveSetup.md  HowToGuides.md  InternationalizationGuide.md  KubernetesDeployment.md  LicensingCompliance.md  MigrationWorkflow.md  MobileApp.md  NotificationsSetup.md  OAuth_Testing_CI_CD.md  OneDriveSetup.md  PipelineTemplates.md  (+18 more)
examples/: agentic-setup.keyless-preprod.json  agentic-setup.preprod.json
frontend/: 404.html  about.html  index.html  input.css  package-lock.json  package.json  tailwind.config.js  upload.html
issues/: 2026-02-08-fix-failing-tests-in-ci-workflow.md  2026-02-08-fix-failing-tests.md  issue_1.md
migrations/: env.py  script.py.mako
mobile/: .gitignore  App.tsx  README.md  app.json  eas.json  package-lock.json  package.json  tsconfig.json
schemas/: docuelevate-setup-v1alpha1.schema.json
scripts/: check_alembic_migrations.py  generate_build_metadata.sh  resolve_release_version.sh  run-ruff-and-fix.sh
tests/: README_INTEGRATION_TESTS.md  README_OAUTH_TESTING.md  conftest.py  conftest_oauth.py  fixtures_integration.py  mock_oauth_server.py  test_additional_coverage.py  test_admin_users.py  test_ai_provider.py  test_allowed_types.py  test_api.py  test_api_advanced_filters.py  test_api_auth_enabled.py  test_api_azure_comprehensive.py  test_api_azure_coverage.py  test_api_azure_extended.py  test_api_classification_rules.py  test_api_common.py  test_api_diagnostic.py  test_api_diagnostic_extended.py  test_api_dropbox.py  test_api_dropbox_extended.py  test_api_error_handling.py  test_api_files_comprehensive.py  test_api_google_drive_comprehensive.py  test_api_google_drive_coverage.py  test_api_google_drive_coverage2.py  test_api_google_drive_extended.py  test_api_google_drive_final.py  test_api_imap_accounts.py  test_api_integrations.py  test_api_logs.py  test_api_mobile.py  test_api_onedrive_comprehensive.py  test_api_onedrive_coverage.py  test_api_onedrive_extended.py  test_api_openai.py  test_api_openai_extended.py  test_api_path_security.py  test_api_pipelines.py  (+248 more)
(+384 files in other folders)
